# This file is part of linux-epoll. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-epoll/master/COPYRIGHT. No part of linux-epoll, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of linux-epoll. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-epoll/master/COPYRIGHT.


[package]
name = "linux-epoll"
description = "linux-epoll"
keywords = ["linux-epoll"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/linux-epoll"
repository = "https://github.com/lemonrock/linux-epoll.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
version = "0.0.0"

[features]
default = []
assume-file-descriptors-are-never-duplicated = []

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
context-coroutine = { path = "extracted-crates/context-coroutine", version = "^0.1.0" }
cpu-affinity = "^0.1.2"
ct-logs = "*"
file-descriptors = "^0.8.5"
indexmap = "^1.0.2"
libc = "^0.2.44"
likely = "^0.1"
lock-free-multi-producer-single-consumer-ring-buffer = "^0.4.0"
rustls = { version = "0.14.0", features = ["dangerous_configuration"] }
terminate = { path = "extracted-crates/terminate", version = "^0.1.0" }
treebitmap = "^0.3"
webpki = "*"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
