# This file is part of linux-epoll. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-epoll/master/COPYRIGHT. No part of linux-epoll, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of linux-epoll. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-epoll/master/COPYRIGHT.


[package]
name = "linux-epoll"
description = "linux-epoll"
keywords = ["linux-epoll"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/linux-epoll"
repository = "https://github.com/lemonrock/linux-epoll.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
version = "0.0.0"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
arrayvec = "^0.4"
context-coroutine = "^2.1.0"
cpu-affinity = "^0.4.2"
dpdk-unix = "^0.2.11"
file-descriptors = "^0.8.6"
hashbrown = { version = "0.1", features = ["nightly", "serde"] }
libc = "^0.2.44"
likely = "^0.1"
message-dispatch = "^0.1.3"
rustls-extra = "0.15.0"
serde = "1.0"
serde_derive = "1.0"
terminate = "0.1.0"
treebitmap = "^0.3"
