# This file is part of rustls-extra. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rustls-extra/master/COPYRIGHT. No part of rustls-extra, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of rustls-extra. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/rustls-extra/master/COPYRIGHT.


[package]
name = "rustls-extra"
description = "Useful abstractions to make it easier to work with the logic in rustls for epoll-based servers and clients."
keywords = ["rustls", "extra", "tls", "ssl"]
categories = []
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/rustls-extra"
repository = "https://github.com/lemonrock/rustls-extra.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.14.0"

[dependencies]
ct-logs = "*"
indexmap = "^1.0.2"
likely = "^0.1"
rustls = { version = "0.14.0", features = ["dangerous_configuration"] }
webpki = "*"
