# This file is part of linux-epoll. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-epoll/master/COPYRIGHT. No part of linux-epoll, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of linux-epoll. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-epoll/master/COPYRIGHT.


[package]
name = "linux-epoll-protocols-dns"
description = "A simple, secure DNS client for linux-epoll that only works over TLS over TCP."
keywords = ["linux", "epoll", "dns", "client", "tls"]
categories = ["asynchronous", "network-programming", "os"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/linux-epoll"
repository = "https://github.com/lemonrock/linux-epoll.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.1.0"

[dependencies]
arrayref = "^0.3.5"
either = "^1.5.1"
hashbrown = { version = "0.1.8", features = ["nightly"] }
likely = "^0.1"
phf = { version = "^0.7.24", features = ["macros"] }
time = "^0.1.42"
