# This file is part of linux-epoll. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-epoll/master/COPYRIGHT. No part of linux-epoll, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2019 The developers of linux-epoll. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/linux-epoll/master/COPYRIGHT.


[package]
name = "linux-epoll-reactor-streaming--sockets"
description = "A reactor for linux-epoll that handles sockets for connected or accepted streams, particularly TCP and Unix Domain sockets."
keywords = ["linux", "epoll", "reactor", "socket", "TCP"]
categories = ["asynchronous", "network-programming", "os"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/linux-epoll"
repository = "https://github.com/lemonrock/linux-epoll.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = true
version = "0.1.0"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
context-coroutine = "^2.1.0"
hashbrown = "^0.1"
likely = "^0.1"
linux-epoll = { path = "../linux-epoll", version = "0.1.0" }
rustls-extra = "0.15.0"
